# PolynomialsHPC

./: .gitignore  CMakeLists.txt  DensePolynomials.hpp  Polynomials.cpp  Polynomials.hpp  README.md  SparsePolynomials.cpp  SparsePolynomials.hpp  TestPolynomial.cpp  TestSparsePolynomial.cpp  mapsparse.hpp  multiplicationBenchmark.cpp  test.cpp  utils.hpp
test/: UtilityFunctionsTest.cpp  test_utility_functions.cpp
test/dense/: DenseAdditionTest.cpp  DenseConstructorsTest.cpp  DenseDerivativeTest.cpp  DenseDerivativeTests.cpp  DenseDivisionTest.cpp  DenseEvaluationTest.cpp  DenseInterpolationTest.cpp  DenseMultiplicationTest.cpp  DenseRandomTest.cpp  DenseSolverTest.cpp  DenseSubtractionTest.cpp  test_dense_subtraction.cpp
test/sparse/: SparseAdditionTest.cpp  SparseConstructorsTest.cpp  SparseDerivativeTest.cpp  SparseHelpersTest.cpp  SparseMonomialTest.cpp  SparseMultiplicaitonTest.cpp  test_sparse_multiplication.cpp
